--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="blank">#00FFFFFF</color>
     <color name="light_gray">#F0F0F0</color>
     <color name="button_color">#0d2e5b</color>
+    <color name="primary_color">#2675e6</color>
 </resources>
