refactor: fix UI and implement choose point

--- a/app/src/main/res/layout/activity_choose_pick_up_location.xml
+++ b/app/src/main/res/layout/activity_choose_pick_up_location.xml
@@ -353,15 +353,17 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvDiemDon"
+    <ListView
+        android:id="@+id/lvDiemDon"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/view5"
-        app:layout_constraintTop_toBottomOf="@+id/headerContainer" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/headerContainer"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/view5"
