--- a/app/src/main/res/drawable/custom_form_input.xml
+++ b/app/src/main/res/drawable/custom_form_input.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <solid android:color="@android:color/white" />
             <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/purple_500" />
+            <stroke android:width="1dp" android:color="@color/blue" />
         </shape>
     </item>
 
