--- a/app/src/main/res/layout/ca_nhan.xml
+++ b/app/src/main/res/layout/ca_nhan.xml
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/service_sentence"
+            android:id="@+id/service_sentence_or_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Để trải nghiệm dịch vụ"
