--- a/app/src/main/res/layout/ca_nhan.xml
+++ b/app/src/main/res/layout/ca_nhan.xml
@@ -76,6 +76,7 @@
             android:id="@+id/service_sentence_or_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:text="Để trải nghiệm dịch vụ"
             android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="@+id/user_name"
@@ -129,6 +130,7 @@
                             android:layout_marginVertical="10dp"
                             android:layout_marginLeft="15dp"
                             android:layout_weight="1"
+                            android:fontFamily="@font/montserrat"
                             android:text="Cập nhật ảnh đại diện"
                             android:textColor="@color/black"
                             android:textSize="16sp" />
@@ -172,6 +174,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginVertical="10dp"
                     android:layout_marginLeft="15dp"
+                    android:fontFamily="@font/montserrat"
                     android:text="Đăng xuất"
                     android:textColor="@color/black"
                     android:textSize="16sp" />
