refactor: integrate backend book tickets

--- a/app/src/main/res/layout/activity_choose_drop_down_location.xml
+++ b/app/src/main/res/layout/activity_choose_drop_down_location.xml
@@ -355,8 +355,8 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvDiemTra"
+    <ListView
+        android:id="@+id/lvDiemTra"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="5dp"
