--- a/app/src/main/res/layout/dang_nhap.xml
+++ b/app/src/main/res/layout/dang_nhap.xml
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:text="Note"
+            android:textColor="@android:color/holo_red_dark"
             android:visibility="invisible" />
 
         <com.google.android.material.textfield.TextInputLayout
