--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,9 @@
     <color name="light_gray">#F0F0F0</color>
     <color name="button_color">#0d2e5b</color>
     <color name="yellow">#FED434</color>
+
+    <!-- new -->
+    <color name="progress">#2CAC62</color>
+    <color name="progress_background">#E6E6E6</color>
+    <color name="golden">#FCD23E</color>
 </resources>
